--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,8 @@
+<h1>Assignment 1</h1>
 <app-warning-alert></app-warning-alert>
 <app-success-alert></app-success-alert>
+
+<h1>Assignment 2</h1>
+<input type="text" [(ngModel)]="username">
+<p>{{username}}</p>
+<button [disabled]="!username" (click)="resetUsername()">Click Me!</button>
