--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,3 +6,10 @@
 <input type="text" [(ngModel)]="username">
 <p>{{username}}</p>
 <button [disabled]="!username" (click)="resetUsername()">Click Me!</button>
+
+<h1>Assignment 3</h1>
+<button (click)="toggleParagraph()">Display Details</button>
+<p *ngIf="isParagraphVisible">Hello how are you?</p>
+<ul>
+    <li *ngFor="let date of btnClickTimeStamps" [ngStyle]="{backgroundColor: date.colorItem ? 'blue' : '', color : date.colorItem ? 'white' : ''}">{{date.timestamp}}</li>
+</ul>
