--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,3 +18,18 @@
 <app-game-control (tickEvent)="ticking($event)"></app-game-control>
 <app-odd *ngFor="let number of oddNumbers" [number]="number"></app-odd>
 <app-even *ngFor="let number of evenNumbers" [number]="number"></app-even>
+
+<h1>Assignment 5</h1>
+<div class="container">
+    <div class="row">
+      <div class="col-xs-12 col-md-8 col-md-offset-2">
+        <app-active-users></app-active-users>
+        <app-inactive-users></app-inactive-users>
+      </div>
+      <!--
+        Optimize this app by adding a UsersService which manages the active and inactive users.
+  
+        Also add a CounterService which counts the number of active->inactive and inactive->active actions.
+      -->
+    </div>
+  </div>
