--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -25,6 +25,7 @@
       <div class="col-xs-12 col-md-8 col-md-offset-2">
         <app-active-users></app-active-users>
         <app-inactive-users></app-inactive-users>
+        <p>{{counter}}</p>
       </div>
       <!--
         Optimize this app by adding a UsersService which manages the active and inactive users.
