--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -25,7 +25,8 @@
       <div class="col-xs-12 col-md-8 col-md-offset-2">
         <app-active-users></app-active-users>
         <app-inactive-users></app-inactive-users>
-        <p>{{counter}}</p>
+        <p>Active to Inactive Count : {{activeToInactiveCounter}}</p>
+        <p>InActive to Active Count : {{inactiveToActiveCounter}}</p>
       </div>
       <!--
         Optimize this app by adding a UsersService which manages the active and inactive users.
