--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -30,8 +30,10 @@
       </div>
       <!--
         Optimize this app by adding a UsersService which manages the active and inactive users.
-  
+
         Also add a CounterService which counts the number of active->inactive and inactive->active actions.
       -->
     </div>
   </div>
+
+  <app-assignment6></app-assignment6>
