--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -39,3 +39,8 @@
   <app-assignment6></app-assignment6>
 
   <app-assignment7></app-assignment7>
+
+  <h1>Assignment 8</h1>
+  <p>This is reverse pipe : {{reversePipeInput | reverse}}</p>
+
+
